src/objects/DFDemo_CaseUtils_Templates__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Mapping of template names to template Case records.</description>
    <fields>
        <fullName>Fieldset_Name__c</fullName>
        <defaultValue>&quot;DFDemo_CaseUtils_AutoCreate_Fields&quot;</defaultValue>
        <description>Name of Case fieldset containing the fields to be cloned from this template.</description>
        <label>Fieldset_Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <defaultValue>null</defaultValue>
        <description>RecordTypeId to assign to cases created from this template.  If null, the case will retain the recordtype of the template.</description>
        <label>RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateID__c</fullName>
        <description>Id of Case template record</description>
        <label>TemplateID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DFDemo_CaseUtils_Templates</label>
</CustomObject>